[gd_scene load_steps=8 format=2]

[ext_resource path="res://Engine/looptest.ogg" type="AudioStream" id=1]
[ext_resource path="res://Rooms/Test/T-5/steeringwheel_frames.png" type="Texture" id=2]
[ext_resource path="res://SoundEffects/honk.wav" type="AudioStream" id=3]
[ext_resource path="res://Rooms/Test/T-5/car_interior.png" type="Texture" id=4]
[ext_resource path="res://Rooms/Test/T-5/VehicleBody.gd" type="Script" id=5]

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.6, 0.6, 0.4 )

[sub_resource type="CylinderShape" id=8]
radius = 0.6
height = 1.2

[node name="PlayerVehicle" type="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )
script = ExtResource( 5 )
engine_force_value = 80

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -3.02394e-06, 1, 0, -1, -3.02394e-06, 0, 0, 0, 1, 0, 0.7, 0 )
shape = SubResource( 7 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( -3.02394e-06, 1, 0, -1, -3.02394e-06, 0, 0, 0, 1, 0, 0.7, -0.6 )
shape = SubResource( 8 )

[node name="CollisionShape3" type="CollisionShape" parent="."]
transform = Transform( -3.02394e-06, 1, 0, -1, -3.02394e-06, 0, 0, 0, 1, 0, 0.7, 0.5 )
shape = SubResource( 8 )

[node name="VehicleWheel" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.7, 0.11, 0.6 )
use_as_traction = true
use_as_steering = true
wheel_radius = 0.261
wheel_rest_length = 0.161
suspension_travel = 0.205
suspension_stiffness = 5.733

[node name="CSGCylinder" type="CSGCylinder" parent="VehicleWheel"]
transform = Transform( -3.25841e-08, -0.2, 0, 0.36875, -6.0077e-08, 0, 0, 0, 0.36875, 0, 0, 0 )
visible = false
sides = 12

[node name="VehicleWheel2" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.7, 0.11, -0.6 )
use_as_traction = true
wheel_radius = 0.261
wheel_rest_length = 0.161
suspension_travel = 0.205
suspension_stiffness = 5.733

[node name="CSGCylinder" type="CSGCylinder" parent="VehicleWheel2"]
transform = Transform( -3.25841e-08, -0.2, 0, 0.36875, -6.0077e-08, 0, 0, 0, 0.36875, 0, 0, 0 )
visible = false
sides = 12

[node name="VehicleWheel3" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 0.11, 0.6 )
use_as_traction = true
use_as_steering = true
wheel_radius = 0.261
wheel_rest_length = 0.161
suspension_travel = 0.205
suspension_stiffness = 5.733

[node name="CSGCylinder" type="CSGCylinder" parent="VehicleWheel3"]
transform = Transform( -3.25841e-08, -0.2, 0, 0.36875, -6.0077e-08, 0, 0, 0, 0.36875, 0, 0, 0 )
visible = false
sides = 12

[node name="VehicleWheel4" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 0.11, -0.6 )
use_as_traction = true
wheel_radius = 0.261
wheel_rest_length = 0.161
suspension_travel = 0.205
suspension_stiffness = 5.733

[node name="CSGCylinder" type="CSGCylinder" parent="VehicleWheel4"]
transform = Transform( -3.25841e-08, -0.2, 0, 0.36875, -6.0077e-08, 0, 0, 0, 0.36875, 0, 0, 0 )
visible = false
sides = 12

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0.3, 0.8, 0.7 )
far = 600.0

[node name="Tween" type="Tween" parent="."]

[node name="HonkAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AlertAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0 )
visible = false
width = 1.2
height = 1.2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="car_interior" type="Sprite" parent="CanvasLayer"]
position = Vector2( 192, 108 )
texture = ExtResource( 4 )

[node name="steeringwheel_frames" type="Sprite" parent="CanvasLayer/car_interior"]
position = Vector2( 3, 52 )
texture = ExtResource( 2 )
hframes = 3
